# ImageProcessingCpp

./: CMakeLists.txt
images/: 45_degree.ppm  90_degree_rotated_image.ppm  black_white.pgm  blurred.ppm  bonanza.ppm  brightened_gamma_equalized.pgm  darkened_gamma_equalized.pgm  gray_scaled.pgm  histogram_equalized.pgm  mirrored_horizontally.ppm  mirrored_vertically.ppm  obama.pgm  resized.ppm  sobel_horizontal.pgm  sobel_vertical.pgm  square.pgm
src/: basic_image_operations.cpp  bounding_box.cpp  color_detection.cpp  colors.cpp  filters.cpp  geometrical_image_operations.cpp  shape_detection.cpp  statistical_operations.cpp
src/header/: basic_image_operations.hpp  bounding_box.hpp  color_detection.hpp  colors.hpp  filters.hpp  geometrical_image_operations.hpp  main_pipeline.hpp  pipeline_box_fusion.hpp  pipeline_colors.hpp  pipeline_shapes.hpp  preprocessing_pipeline.hpp  shape_detection.hpp  statistical_operations.hpp
src/pipelines/: main_pipeline.cpp  pipeline_box_fusion.cpp  pipeline_colors.cpp  pipeline_shapes.cpp  preprocessing.cpp  preprocessing_pipeline.cpp
